deploy/opengauss-datastat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-datastat
  name: opengauss-datastat
