deploy/opengauss-datastat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengauss-service
  namespace: opengauss-datastat
spec:
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: opengauss
  type: ClusterIP
