deploy/opengauss-datastat/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: opengauss-datastat-ingress
  namespace: opengauss-datastat
spec:
  tls:
    - hosts:
        - datastat.opengauss.org
      secretName: datastat-opengauss-tls
  rules:
    - host: datastat.opengauss.org
      http:
        paths:
          - backend:
              serviceName: opengauss-service
              servicePort: 80
            path: /
